--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -38,3 +38,25 @@
     }
   }
 }
+.window-overlay{
+  background-color: rgba(0, 0, 0, 0.6);
+  display: none;
+  height: 100%;
+  left: 0;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 20;
+  .popup{
+    position: relative;
+    background-color: white;
+    width: 50%;
+    margin-left: 25%;
+    .close{
+      position: absolute;
+      top: 1px;
+      right: 3px;
+    }
+  }
+}
