--- a/app/assets/javascripts/templates/tasks.handlebars
+++ b/app/assets/javascripts/templates/tasks.handlebars
@@ -16,6 +16,7 @@
               </li>
             {{/each}}
         </ul>
+        {{#linkTo 'tasks.new' classNames="button success radius"}}Добавить{{/linkTo}}
     </div>
 
     <div id="specificationTasks" class="task-container large-2 columns">
