--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -16,8 +16,10 @@
         list-style: none;
         position: relative;
         background-color: #ffffff;
+        margin-bottom: 10px;
+        padding: 2px 5px;
         p{
-          margin-bottom: 0.75em;
+          margin-bottom: 0;
         }
         .delete{
           position: absolute;
