--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -55,6 +55,7 @@
     background-color: white;
     width: 50%;
     margin-left: 25%;
+    padding: 5px 10px;
     .close{
       position: absolute;
       top: 1px;
